[package]
name = "tcp-connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "sync", "net"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
